<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.FaqFragment"
    android:background="#ffff"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_marginTop="25dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1"
                    android:textSize="20sp"
                    android:textColor="#A4A4A4"
                    android:layout_marginLeft="10dp"/>
            <View style="@style/Divider"
                android:layout_marginTop="20dp"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/q2"
            android:layout_below="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:textColor="#A4A4A4"
                android:layout_marginLeft="10dp"/>
            <View style="@style/Divider"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
            <LinearLayout
                android:id="@+id/q3"
                android:layout_below="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_marginTop="25dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a3"
                    android:textSize="20sp"
                    android:textColor="#A4A4A4"
                    android:layout_marginLeft="10dp"/>
                <View style="@style/Divider"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/q4"
                android:layout_below="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:layout_marginTop="25dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a4"
                    android:textSize="20sp"
                    android:textColor="#A4A4A4"
                    android:layout_marginLeft="10dp"/>
                <View style="@style/Divider"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>
       </RelativeLayout>
    </ScrollView>
</FrameLayout>